--- a/templates/my_first_app/echo_name.html
+++ b/templates/my_first_app/echo_name.html
@@ -21,3 +21,5 @@
 {% block app_actions %}
   <a href="{% url 'my_first_app:home' %}" class="btn btn-default">Back</a>
 {% endblock %}
+
+<!--Spencer Can you hear me now?-->
